install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR)/Wunderschön
	install -m 0644 Wunderschön.cfg $(DESTDIR)$(PLUGINDIR)/Wunderschön
	install -m 0644 Wunderschön.lua $(DESTDIR)$(PLUGINDIR)/Wunderschön
	install -m 0644 Wunderschön_hint.png $(DESTDIR)$(PLUGINDIR)/Wunderschön

uninstall-local:
	-rm $(DESTDIR)$(PLUGINDIR)/Wunderschön/Wunderschön.cfg
	-rm $(DESTDIR)$(PLUGINDIR)/Wunderschön/Wunderschön.lua
	-rm $(DESTDIR)$(PLUGINDIR)/Wunderschön/Wunderschön_hint.png
	-rmdir $(DESTDIR)$(PLUGINDIR)/Wunderschön



