installdir = $(CONFIGDIR)/design/classic/icons

# main menu
install_DATA = \
	tv.png \
	radio.png \
	webtv.png \
	scart.png \
	mediaplayer.png \
	settings.png \
	service.png \
	timerlist.png \
	features.png \
	powermenu.png \
	boxinfo.png

# mediaplayer
install_DATA += \
	internetradio.png \
	audioplayer.png \
	tsplayer.png \
	movieplayer.png \
	fileplayer.png \
	pictureviewer.png \
	upnpbrowser.png

# settings
install_DATA += \
	videosettings.png \
	audiosettings.png \
	parentallocksettings.png \
	networksettings.png \
	recordingsettings.png \
	movieplayersettings.png \
	osdsettings.png \
	lcdsettings.png \
	remotecontrolsettings.png \
	audioplayersettings.png \
	pictureviewersettings.png \
	miscsettings.png \
	hddsettings.png

# osd settings
install_DATA += \
	themes.png \
	menucolors.png \
	infobarcolors.png \
	language.png \
	font.png \
	fontscaling.png \
	osdtiming.png \
	screensetup.png \
	alphasetup.png

# misc settings
install_DATA += \
	generalsettings.png \
	channellistsettings.png \
	epgsettings.png \
	filebrowsersettings.png \
	startchannelsettings.png \
	psisettings.png

# service
install_DATA += \
	scansettings.png \
	reloadchannels.png \
	bouquetseditor.png \
	cicam.png \
	satip.png \
	imageinfo.png \
	softupdate.png

# power menu
install_DATA += \
	sleeptimer.png \
	restart.png \
	standby.png \
	reboot.png \
	shutdown.png
	



